docs/book/samples/ch02/shadow_check.out
error[unused]: unused binding: each version of `tau` is used before the next
  --> shadow_check.kso:1:1
   1 | tau = 5
       ^
