docs/book/samples/ch02/shadow_check.kso
tau = 5
tau = 3

print "{tau}"
